test/files/neg/t4079.check
t4079_2.scala:2: error: could not find implicit value for parameter f: Functor[List]
  Cat.compose[List,Option].Functor
                           ^
one error found
